# ARE2Train

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: README.md  are.example.yaml  env.example.yaml
configs/eval/: README.md  baseline.yaml  preference.yaml  rlvr.yaml  sft.yaml  teacher.yaml
docs/: README.md
docs/paper/: README.md  evaluation-protocol.md
docs/process-log/: 001-bootstrap.md  002-tutorial-roadmap.md  003-research-question-and-protocol.md  004-environment-and-repo-setup.md  005-repository-cleanup.md  006-are-gaia2-primer.md  README.md  TEMPLATE.md
docs/tutorial/: 00-overview-learning-path.md  01-research-question-and-protocol.md  02-environment-and-repo-setup.md  03-are-gaia2-primer.md  04-baseline-runner.md  05-trajectory-schema.md  06-trace-store-and-failure-taxonomy.md  07-scenario-factory.md  08-verifier-and-reward.md  09-teacher-trajectories.md  10-sft-data-and-lora.md  11-preference-data-and-training.md  12-rlvr-grpo.md  13-evaluation-and-ablation.md  14-industrialization.md  15-paper-and-release.md  16-glossary.md  README.md
experiments/: README.md
scripts/: bootstrap_env.sh  doctor.py  smoke_test.sh
src/are2train/: __init__.py  doctor.py
tests/: test_doctor.py
