[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "are2train"
version = "0.1.0"
description = "Training infrastructure for ARE/Gaia2-style agentic post-training experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
are2train-doctor = "are2train.doctor:main"

[tool.setuptools.packages.find]
where = ["src"]
